Fix topbar overflowing to links in chrome
Because setting explicit height is not good enough apparently.

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ a:active {
 }
 
 .topbar {
+	overflow:hidden;
 	text-align:center;
 }
 #menu {
